Initial styling of navbar.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.png" />
+        <meta name="author" content="Federico Engler" />
+        <meta name="description" content="Federico Engler's photography page" />
+        <meta name="keywords" content="Photography, video, drone, digital editing, fantasy images" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>farodyne.com</title>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Abel&family=Ephesis&family=Great+Vibes&family=Protest+Revolution&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Abel&family=Ephesis&family=Protest+Revolution&display=swap');
+        </style>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
