Implemented initial latest albums component.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -11,6 +11,7 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Abel&family=Ephesis&family=Great+Vibes&family=Protest+Revolution&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Abel&family=Ephesis&family=Protest+Revolution&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Hurricane&display=swap');
         </style>
     </head>
     <body>
