Harmonized handwritten font styling.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -9,9 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>farodyne.com</title>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Abel&family=Ephesis&family=Great+Vibes&family=Protest+Revolution&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Abel&family=Ephesis&family=Protest+Revolution&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Hurricane&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Allura&family=Birthstone&family=My+Soul&family=Whisper&display=swap');
         </style>
     </head>
     <body>
